fix spacing

--- a/app/assets/stylesheets/channel_view.scss
+++ b/app/assets/stylesheets/channel_view.scss
@@ -233,5 +233,5 @@ div span.top-date-span {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    min-width: 72%;
+    min-width: 100%;
 }
