--- a/app/assets/stylesheets/private_servers.scss
+++ b/app/assets/stylesheets/private_servers.scss
@@ -18,12 +18,13 @@
 }
 
 .private-search-bar {
-    padding-top: 5px;
+    padding-top: 6px;
     position: relative;
     width: 25%;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    height: 75%;
 }
 
 #home-search-bar {
